fixed spacing of pop up menu

--- a/css/app.css
+++ b/css/app.css
@@ -297,9 +297,11 @@ main img {
 					}
 
 					div#exampleMenu1.reveal {
+						padding: 0rem;
+						padding-top: 3rem;
 						background-color: #BC5E41;
-						height: 30%;
-					    min-height: 30%;
+						height: 50%;
+					    min-height: 50%;
 					}
 
 					div#exampleMenu1.reveal .close-button {
